--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -1,10 +1,9 @@
 .top-navbar {
   position: fixed;
   width: 100vw;
-  height: 50px;
   background: black;
   z-index: 2;
-  padding: 0px 10px;
+  padding: 0 10px 0px 55px;
 }
 
 .top-navbar-item {
@@ -20,7 +19,8 @@
   font-weight: bold;
   color: white;
   border-right: 1px solid #fff;
-  padding: 0 10px;
+  margin-top: 10px;
+  padding-right: 10px;
   margin-right: 10px;
 }
 
